--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/bhagatabhijeet/TSEatDaBurger/issues"
   },
-  "homepage": "https://github.com/bhagatabhijeet/TSEatDaBurger#readme"
+  "homepage": "https://github.com/bhagatabhijeet/TSEatDaBurger#readme",
+  "dependencies": {
+    "@types/express": "^4.17.8",
+    "@types/express-handlebars": "^3.1.0",
+    "@types/mysql": "^2.15.15",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "mysql": "^2.18.1"
+  }
 }
