--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/bhagatabhijeet/TSEatDaBurger#readme",
   "dependencies": {
-    "@types/express": "^4.17.8",
-    "@types/express-handlebars": "^3.1.0",
-    "@types/mysql": "^2.15.15",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/express-handlebars": "^3.1.0",
+    "@types/jquery": "^3.5.2",
+    "@types/mysql": "^2.15.15"
   }
 }
